# meid

./: LICENSE  README.md  meid.cabal
test-suite/Data/Telephony/: MeidSpec.hs
