name:          meid
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18
library
    exposed-modules:  Data.Telephony.Meid
    hs-source-dirs:   library
    default-language: Haskell2010
    build-depends:    base

test-suite hspec
    build-depends:    base, meid, hspec == 1.8.*
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0