name:          meid
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18
category:      Data
maintainer:    Nick Saunders <nick@saunde.rs>
synopsis:      A module for representing Mobile Equipment Identifiers
description:   A module containing a Mobile Equipment Identifier data type and related utilities.
license:       MIT
license-file:  LICENSE
library
    exposed-modules:  Data.Telephony.Meid
    hs-source-dirs:   library
    default-language: Haskell2010
    build-depends:    base <4.7
test-suite hspec
    build-depends:    base, meid, hspec == 1.8.*
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0